# BlogsAI

./: .env.example  .gitignore  DISTRIBUTION_GUIDE.md  DISTRIBUTION_README.md  Presentation1.pptx  README.md  blogsai-macos.spec  blogsai-windows.spec  blogsai.spec  build.py  build.py.backup  pyproject.toml  standalone_app.py  standalone_app_new.py  ~$Presentation1.pptx
.github/workflows/: build-macos.yml  build-windows.yml
assets/: icon.icns
blogsai/: __main__.py  main.py
blogsai/analysis/: __init__.py  analyzer.py  openai_client.py  verifier.py
blogsai/cli/: distribution.py  main.py
blogsai/config/: app_dirs.py  config.py  credential_manager.py  distribution.py  env_manager.py
blogsai/config/defaults/: settings.yaml  sources.yaml
blogsai/core/: __init__.py
blogsai/database/: database.py  models.py
blogsai/gui/: __init__.py  api_key_dialog.py  main_window.py  registry.py  security_dialog.py  setup_dialog.py
blogsai/gui/dialogs/: article_dialog.py  report_dialog.py  (+2 more)
blogsai/reporting/: generator.py
blogsai/scrapers/: __init__.py  _common.py  base.py  cftc_scraper.py  doj_scraper.py  government.py  manager.py  sec_scraper.py  url_scraper.py
blogsai/utils/: database_helpers.py  directory_manager.py  error_dialogs.py  error_handling.py  logging_config.py  timezone_utils.py
data/: blogsai.db  settings.yaml  sources.yaml
data/prompts/: citation_verifier.txt
hooks/: hook-windows-dll.py  runtime_distribution.py  runtime_windows_dll.py
tests/: __init__.py  test_analysis_worker.py  test_analyzer.py  test_report_generator.py  test_scraper_manager.py
(+13 files in other folders)
